# moonlight-embedded

./: .classpath  .directory  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  ISSUE_TEMPLATE.md  Makefile  README.md  appveyor.yml  build.xml  gamecontrollerdb.txt  manifest.mf  moonlight.conf  one-jar-ant-task.xml  release.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.core/: savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
assets/: moonlight-switch-connecting.psd  moonlight-switch-connection-failed.psd  moonlight-switch-logo
cmake/: FindAmlogic.cmake  FindBroadcom-MMAL.cmake  FindBroadcom-OMX.cmake  FindBroadcom.cmake  FindFreescale.cmake  FindLibUUID.cmake  FindMMAL.cmake  FindOMX.cmake  FindOpus.cmake  FindRockchip.cmake  generate_version_header.cmake  use_c99.cmake
debian/: changelog  control  copyright  rules
debian/patches/: c99.patch  enet.patch  install.patch  openssl.patch  series
dependencies/: .gitignore  dependencies.sh  libnx-netdb-socklen_t.patch
dependencies/switch-libavcodec/: PKGBUILD
dependencies/switch-libexpat/: PKGBUILD
dependencies/switch-libopus/: PKGBUILD
dependencies/switch-openssl/: PKGBUILD  openssl-1.0.2o.patch
docs/: CMakeLists.txt  README.pod
h264bitstream/: h264_nal.c  h264_sei.h  h264_stream.c
ilclient/: ilclient.c
include/: debug.h
jni/gamepad_jni/: Gamepad.h  buildlinux.sh  buildosx.sh  buildwin.sh  gamepad_jni.c
jni/nv_alsa/: build.sh  makefile  nv_alsa.c  nv_alsa.h  nv_alsa_jni.c
jni/nv_avc_dec/: build.sh  nv_avc_dec.c  nv_avc_dec_jni.c
jni/nv_imx_dec/: makefile  nv_imx_dec.c  nv_imx_dec.h  nv_imx_dec_jni.c
jni/nv_io/: build.sh  makefile  nv_io_jni.c
jni/nv_omx_dec/: build.sh  makefile  nv_omx_dec.c  nv_omx_dec.h  nv_omx_dec_jni.c
jni/nv_opus_dec/: build.sh  makefile  nv_opus_dec.c  nv_opus_dec.h  nv_opus_dec_jni.c
libgamestream/: CMakeLists.txt  Makefile  Makefile.switch  client.c  client.h  discover.c  discover.h  errors.h  global.c  http.c  http.h  mkcert.c  mkcert.h  sps.c  sps.h  xml.c  xml.h
libs/osx/: libgamepad_jni.dylib  libjinput-osx.jnilib  libnv_opus_dec.dylib
libswitchui/: switchui.h
libswitchui/switchui/: button-set.c  button-set.h  button.c  button.h  common.h  element.c  element.h  input.c  input.h  scene.c  scene.h  sidebar.c  sidebar.h  state.c  state.h  text.c  text.h  ui.c  ui.h  util.c  util.h
limelight-pc/: .classpath  .project  build.xml
limelight-pc/icon/Icon Draft/: appstore copy.psd  appstore.ai
limelight-pc/jni/nv_avc_dec/: nv_avc_dec.c  nv_avc_dec.h
limelight-pc/libs/: libavfilter-3.dylib  libavformat-55.dylib  libavutil-52.dylib  libnv_avc_dec.dylib  libopus.0.dylib  libswresample-0.dylib
limelight-pc/libs/osx/: libnv_opus_dec.dylib  libswscale-2.dylib
limelight-pc/src/com/limelight/: #Limelight.java#  Limelight.java
mappings/: cordlessrumblepad2.conf  default.conf  dualshock3.conf  dualshock4.conf  pstv.conf  rumblepad2.conf  vita.conf  wiiupro.conf  xbox360.conf
resources/: changeinfo.xml
sce_sys/livearea/contents/: template.xml  template.xml.format
src/: a.out  application-info.cpp  application-info.h  application.cpp  application.h  audio.c  audio.h  client.c  client.h  config.c  config.h  configuration.h  configuration.h.in  connection.c  connection.h  cpu.c  cpu.h  debug.c  debug.h  device.c  device.h  font.c  global.c  global.h  graphics.c  graphics.h  http.c  input.c  input.h  keyboard.h  loop.c  loop.h  main.c  main.cpp  mapping.c  mapping.h  mkcert.c  platform.c  platform.h  promise.cpp  (+12 more)
src/audio/: alsa.c  audio.h  fake.c  omx.c  oss.c  pulse.c  sdl.c  switch.c  vita.c  vita.h
src/com/limelight/: Limelight.java
src/gui/: button-set.c  button-set.h  button.c  button.h  gui-main.c  gui-stream.c  gui.c  gui.h  guilib.c  guilib.h  ime.c  ime.h  scene.c  scene.h  text.c  text.h  ui.c  ui.h  ui_connect.c  ui_connect.h  ui_device.c  ui_device.h  ui_settings.c  ui_settings.h
src/gui/main/: gui-main.c  gui-main.h  state-connecting.c  state-connection-failed.c  state-games-list.c  state-initial.c  state-settings.c  state-streaming.c
src/gui/stream/: gui-stream.c
src/input/: cec.c  cec.h  evdev.c  evdev.h  keyboard.h  mapping.c  mapping.h  sdl.c  sdl.h  sdlinput.c  sdlinput.h  switch.c  switch.h  udev.c  udev.h  vita.c  vita.h  x11.c  x11.h
src/power/: vita.c  vita.h
src/sdl/: input.h  platform.c  sdl.h  video.c
src/ui/: state-connecting.c  state-connection-failed.c  state-games-list.c  state-initial.c  state-settings.c  state-streaming.c  ui-fps-counter.cpp  ui-fps-counter.h  ui-game-button.cpp  ui-game-button.h  ui-main.c  ui-main.h  ui-state-connecting.cpp  ui-state-connecting.h  ui-state-connection.cpp  ui-state-connection.h  ui-state-games-list.cpp  ui-state-games-list.h  ui-state-initial.cpp  ui-state-initial.h  ui-state-settings.cpp  ui-state-settings.h  ui-state-streaming.cpp  ui-state-streaming.h  ui-state.cpp  ui-state.h
src/ui/switch/: sui-button.cpp  sui-button.h  sui-common.h  sui-container.cpp  sui-container.h  sui-element.cpp  sui-element.h  sui-fps-counter.cpp  sui-fps-counter.h  sui-graphics.cpp  sui-graphics.h  sui-grid-container.cpp  sui-grid-container.h  sui-image.cpp  sui-image.h  sui-loading-spinner.cpp  sui-loading-spinner.h  sui-scene.cpp  sui-scene.h  sui-stage.cpp  sui-stage.h  sui-text.cpp  sui-text.h  sui.cpp  sui.h
src/video/: aml.c  egl.c  egl.h  fake.c  ffmpeg.c  ffmpeg.h  ffmpeg_vaapi.c  ffmpeg_vaapi.h  ffmpeg_vdpau.c  ffmpeg_vdpau.h  imx.c  imx_vpu.c  imx_vpu.h  mmal.c  omx.c  pi.c  rk.c  sdl.c  switch.c  vdpau.c  video-switch.c  video.h  vita.c  vita.h  x11.c
(+78 files in other folders)
